--- a/assets/css/kontaktai.css
+++ b/assets/css/kontaktai.css
@@ -1,18 +1,24 @@
+img {
+  max-width: 100%;
+}
 .section {
   text-align: center;
-    padding: 25% 0;
+  padding: 25% 0;
 }
-.container{
-    max-width: 1140px;
-    margin: 0 auto;
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
 }
+
 .box-button-wraper {
-    margin-top: 50px;
-    margin-left: -10px;
-    margin-right: -10px;
+  margin-top: 50px;
+  margin-left: -10px;
+  margin-right: -10px;
 }
-.box{
+.box {
+  /* Sitas elementas neturetu tureti width:50% */
   width: 50%;
-    float: left;
-    box-sizing: border-box;
-    }
+  float: left;
+  box-sizing: border-box;
+}
+
