--- a/assets/css/kontaktai.css
+++ b/assets/css/kontaktai.css
@@ -1,18 +1,17 @@
-
 .section {
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-  
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
 }
+
 .container {
   max-width: 1140px;
   margin: 0 auto;
 }
-h1{
+
+h1 {
   text-align: left;
   margin-top: 0;
   font-size: 40px;
- 
 }
 
 .box-button-wraper {
@@ -20,7 +19,8 @@ h1{
   margin-left: -10px;
   margin-right: -10px;
 }
-.clearfix::after{
+
+.clearfix::after {
   content: "";
   clear: both;
   display: table;
@@ -28,31 +28,33 @@ h1{
 
 .box {
   /* Sitas elementas neturetu tureti width:50% */
-  
   box-sizing: border-box;
   margin-right: 10px;
 }
-.left-box{
-float: left;
-width: 45%;
-padding: 10px;
+
+.left-box {
+  float: left;
+  width: 45%;
+  padding: 10px;
 }
+
 img {
   max-width: 100%;
 }
+
 .right-box {
   margin-top: 0;
   float: left;
   width: 45%;
   padding: 10px;
 }
-.forms{
+
+.forms {
   width: 100%;
   margin-bottom: 15px;
 }
-input[type="text"],
-input[type="email"],
-textarea {
+
+input[type="text"], input[type="email"], textarea {
   box-sizing: border-box;
   border: none;
   background-color: #f3f3f3;
@@ -61,12 +63,14 @@ textarea {
   margin-bottom: 10px;
   width: 100%;
 }
-textarea{
+
+textarea {
   width: 100%;
 }
-input[type=submit]{
+
+input[type=submit] {
   color: white;
   padding: 10px;
   background-color: black;
-  
+  border-radius: 4px;
 }
