--- a/assets/css/nd-05-19.css
+++ b/assets/css/nd-05-19.css
@@ -3,16 +3,21 @@ body {
 }
 .container-body{
     width: 1140;
+    margin: 0 auto;
+   
 }
 .all-card{
     display: flex;
     flex-direction: row;
-
     flex-wrap: wrap;
+    flex-grow: 1;
+ 
+    
 
 }
 .card-container{
     display: flex;
     flex-direction: column;
     width: 33,33%;
+    margin: 5px;
 }
