--- a/assets/css/position-absolute.css
+++ b/assets/css/position-absolute.css
@@ -24,14 +24,23 @@
     background: #00d054;
     width: 50px;
     height: 50px;
-    position: absolute;
-    left: 10px;
-    bottom: 10px;
-    display: flex;
-    flex-direction: column;
    
-}
-
+    }
+    .icon-1 {
+        position: absolute;
+        left: 10 px;
+        bottom: 10px;
+    }
+    .icon-2 {
+        position: absolute;
+        left: 70 px;
+        bottom: 10px;
+    }
+    .icon-3 {
+        position: absolute;
+        left: 140px;
+        bottom: 10px;
+    }
 .icon i {
     color: white;
     font-size: 30px;
